--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/AlissonCH/LIM015-md-links#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "jsdom": "^16.6.0",
     "markdown-it": "^12.1.0",
     "markdown-link-extractor": "^1.3.0"
   },
@@ -36,5 +37,8 @@
     "eslint": "^7.31.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12"
+  },
+  "bin": {
+    "md-links": "./cli.js"
   }
 }
