--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "import/extensions": 0
   }
 }
