--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "colors": "^1.4.0",
     "jsdom": "^16.6.0",
     "markdown-it": "^12.1.0",
-    "markdown-link-extractor": "^1.3.0"
+    "markdown-link-extractor": "^1.3.0",
+    "node-fetch": "^2.6.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "eslint": "^7.31.0",
