--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "markdown-it": "^12.1.0"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
-    "jest": "^27.0.6",
-    "nodemon": "^2.0.12"
+    "jest": "^27.0.6"
   },
   "bin": {
     "md-links": "./src/cli.js"
